# hs-realworld

./: .env.template  .gitignore  .gitmodules  README.md  hs-realworld.cabal  stack.yaml
app/: Main.hs  RealWorldServer.hs
app/RealWorldServer/: API.hs  APIApp.hs  AuthToken.hs  CommandLine.hs  DB.hs  Login.hs  ProxyApp.hs  StaticApp.hs  Types.hs  User.hs  VersionInfo.hs
app/RealWorldServer/DB/: Funcs.hs  Types.hs
doctest/: Main.hs
script/: backend  backend-init  db  db-init  dev  frontend  frontend-init
src/: RealWorld.hs
src/RealWorld/: Funcs.hs  Types.hs  Util.hs
